--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
               
               <label for="state">State</label>
               <select id="state" name="user_state" >
-                <option>Choose State</option>
+                <option selected hidden disabled>Choose State</option>
                 <option value="AL">Alabama</option>
                 <option value="AK">Alaska</option>
                 <option value="AZ">Arizona</option>
